--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "assets.d.ts"],
+  "include": ["src", "assets.d.ts", "src/*.d.ts"],
   "references": [{"path": "./tsconfig.node.json"}]
 }
