--- a/package.json
+++ b/package.json
@@ -29,10 +29,14 @@
     }
   },
   "dependencies": {
+    "immer": "^10.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
-    "styled-components": "^5.3.11"
+    "react-focus-lock": "^2.9.4",
+    "react-remove-scroll": "^2.5.6",
+    "styled-components": "^5.3.11",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
