--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-focus-lock": "^2.9.4",
+    "react-icons": "^4.9.0",
     "react-remove-scroll": "^2.5.6",
     "styled-components": "^5.3.11",
     "use-immer": "^0.9.0"
