--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-icons": "^4.9.0",
     "react-remove-scroll": "^2.5.6",
     "styled-components": "^5.3.11",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
